--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./style.css">
-  
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
   <title>Document</title>
 </head>
 <body>
   <div class="quote-box">
     <h2>Quote of the day</h2>
-    <blockquote>Loading...</blockquote>
-    <span>loading...</span>
+    <blockquote id="quote">Loading...</blockquote>
+    <span id="author">loading...</span>
     <div>
-      <button>New Quote</button>
-      <button>Tweet</button>
+      <button onclick="getquote(api_url)">New Quote</button>
+      <button onclick="tweet()"><i class="fa-brands fa-twitter"></i>&nbsp;&nbsp;Tweet</button>
     </div>
   </div>
   <script src="./first.js"></script>
